<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_programs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignment.truestrength.Programme">

    <TextView
        android:text="@string/exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/ExerciseTitle_text"
        android:textSize="50sp" />

    <Button
        android:text="@string/to_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/To_ProgressBtn"
        android:onClick="clickToProgress"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="# KG\n# Reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RepBtn3"
        android:layout_alignBaseline="@+id/RepBtn1"
        android:layout_alignBottom="@+id/RepBtn1"
        android:layout_alignEnd="@+id/ExerciseTitle_text"
        tools:ignore="HardcodedText" />

    <Button
        android:text="@string/kg_n_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/RepBtn3"
        android:layout_alignBottom="@+id/RepBtn3"
        android:layout_centerHorizontal="true"
        android:id="@+id/RepBtn2" />

    <Button
        android:text="@string/nextButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RepBtn3"
        android:layout_alignEnd="@+id/RepBtn3"
        android:layout_marginTop="79dp"
        android:id="@+id/NextBtn"
        android:textSize="60sp" />

    <Button
        android:text="@string/backButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:textSize="60sp"
        android:layout_alignBaseline="@+id/NextBtn"
        android:layout_alignBottom="@+id/NextBtn"
        android:layout_toStartOf="@+id/To_ProgressBtn"
        tools:ignore="HardcodedText" />

    <Button
        android:text="# KG \n# Reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/RepBtn1"
        android:layout_below="@+id/ExerciseTitle_text"
        android:layout_alignStart="@+id/ExerciseTitle_text"
        tools:ignore="HardcodedText" />

</RelativeLayout>
